apps/media/jellyseerr/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app: jellyseerr
spec:
  selector:
    matchLabels:
      app: jellyseerr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  jellyseerr
      labels:
        app: jellyseerr
    spec:
      runtimeClassName: nvidia
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr
          # imagePullPolicy: IfNotPresent
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 100Mi
          #   limits:
          #     cpu: 100m
          #     memory: 100Mi
          # livenessProbe:
          #   tcpSocket:
          #     port: 80
          #   initialDelaySeconds: 5
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 3
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /_status/healthz
          #     port: 80
          #   initialDelaySeconds: 5
          #   timeoutSeconds: 2
          #   successThreshold: 1
          #   failureThreshold: 3
          #   periodSeconds: 10

          ports:
            - containerPort: 5055
              name: jseerr-webui

          volumeMounts:
            - name: config
              mountPath: /app/config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
      restartPolicy: Always
